--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -31,8 +31,8 @@
     </details>
 
     <!-- STEP 2 -->
-    <section id="step2" class="step">
-      <div class="stepTitle">Step 2: Clean the Bones by Boiling </div>
+	<details>
+      <summary class="stepTitle">Step 2: Clean the Bones by Boiling </div>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -46,11 +46,11 @@
           <img src="../Lab1/IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
     <!-- STEP 3 -->
-    <section id="step3" class="step">
-      <div class="stepTitle">Step 3: Add Aromatics</div>
+    <details>
+      <summary class="stepTitle">Step 3: Add Aromatics</div>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -62,13 +62,13 @@
         </div>
 
         <div class="stepImage">
-          <img src="../Lab1/IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="518" height="350">
+          <img src="../Lab1/IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="384" height="478">
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
     <!-- STEP 4 -->
-    <section id="step4" class="step">
+    <details>
       <div class="stepTitle">Step 4: Add Water</div>
 
       <div class="stepContent">
@@ -80,13 +80,13 @@
         </div>
 
         <div class="stepImage">
-          <img src="../Lab1/IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="350">
+          <img src="../Lab1/IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="478">
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
     <!-- STEP 5 -->
-    <section id="step5" class="step">
+    <details>
       <div class="stepTitle">Step 5: Simmer Slowly</div>
 
       <div class="stepContent">
@@ -100,10 +100,10 @@
           <img src="../Lab1/IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" width="522" height="350">
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
     <!-- STEP 6 -->
-    <section id="step6" class="step">
+    <details>
       <div class="stepTitle">Step 6: Final Adjustments &amp; Storage</div>
 
       <div class="stepContent">
@@ -115,12 +115,12 @@
         </div>
 
         <div class="stepImage">
-          <img src="../Lab1/IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="520" height="478">
-          <img src="../Lab1/IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" width="520" height="478">
+          <img src="../Lab1/IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="420" height="350">
+          <img src="../Lab1/IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" width="522" height="350">
           
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
   </div>
   <p><!-- /#wrapper -->    </p>
