--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
  <link href="CSS/jobaid.css.css" rel="stylesheet"> 
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
 </head>
 <body>
@@ -11,7 +13,6 @@
 	<h1>How to Make Bone Broth</h1>
     <h2>By Zi Guo</h2>
 	</div>
-
 	  
     <!-- STEP 1 -->
     <details open>
@@ -22,6 +23,9 @@
           <p>Choose a mix of: <li>marrow bones</li> <li>knucklebones</li> <li>meaty bones (beef, chicken, or pork)</li>
             The variety adds both flavor and nutrients.
           </p>
+			<p class="warning">
+				<span class="material-icons">warning</span>
+			It is important to make sure the bones are fresh by checking their<strong>coloration</strong>. Also <strong> mold can form when exposed to moisture and air, so store them in a cool, dry place away from sunlight</strong> if they are not being used immediately.    </p>
         </div>
 
         <div class="stepImage">
