--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
- <link href="CSS/jobaid.css.css" rel="stylesheet"> 
+ <link href="CSS/jobaid.css" rel="stylesheet"> 
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
