--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -26,7 +26,7 @@
 			<p class="warning">
 				<span class="material-icons">warning</span>
 			It is important to make sure the bones are fresh by checking their<strong>coloration</strong>. Also <strong> mold can form when exposed to moisture and air, so store them in a cool, dry place away from sunlight</strong> if they are not being used immediately.    </p>
-        </div>
+        </div><!--Step1-->
 
         <div class="stepImage">
           <img src="../Lab1/IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" width="518" height="350">
@@ -36,7 +36,7 @@
 
     <!-- STEP 2 -->
 	<details>
-      <summary class="stepTitle">Step 2: Clean the Bones by Boiling </div>
+      <summary class="stepTitle">Step 2: Clean the Bones by Boiling </summary>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -50,11 +50,11 @@
           <img src="../Lab1/IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
-    </details>
+    </details><!--Step2-->
 
     <!-- STEP 3 -->
     <details>
-      <summary class="stepTitle">Step 3: Add Aromatics</div>
+      <summary class="stepTitle">Step 3: Add Aromatics</summary>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -69,11 +69,11 @@
           <img src="../Lab1/IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="384" height="478">
         </div>
       </div><!-- /.stepContent -->
-    </details>
+    </details><!--Step3-->
 
     <!-- STEP 4 -->
     <details>
-      <div class="stepTitle">Step 4: Add Water</div>
+      <summary class="stepTitle">Step 4: Add Water</summary>
 
       <div class="stepContent">
         <div class="stepDescription"><li>Add enough water to cover bones and vegetables by 2–3 inches.</li>    
@@ -87,11 +87,11 @@
           <img src="../Lab1/IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="478">
         </div>
       </div><!-- /.stepContent -->
-    </details>
+    </details><!--Step4-->
 
     <!-- STEP 5 -->
     <details>
-      <div class="stepTitle">Step 5: Simmer Slowly</div>
+      <summary class="stepTitle">Step 5: Simmer Slowly</summary>
 
       <div class="stepContent">
         <div class="stepDescription"><li>Simmer 12–24 hours for beef bones or 6–12 hours for chicken.</li>           
@@ -104,11 +104,11 @@
           <img src="../Lab1/IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" width="522" height="350">
         </div>
       </div><!-- /.stepContent -->
-    </details>
+    </details><!--Step5-->
 
     <!-- STEP 6 -->
     <details>
-      <div class="stepTitle">Step 6: Final Adjustments &amp; Storage</div>
+      <summary class="stepTitle">Step 6: Final Adjustments &amp; Storage</summary>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -124,7 +124,7 @@
           
         </div>
       </div><!-- /.stepContent -->
-    </details>
+    </details><!--Step6-->
 
   </div>
   <p><!-- /#wrapper -->    </p>
