--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -2,6 +2,9 @@
 <head>
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
  <link href="CSS/jobaid.css" rel="stylesheet"> 
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
