--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -131,6 +131,7 @@
 
   </div>
   <p><!-- /#wrapper -->    </p>
+  <details open> <!--reference-->
   References
   Pictures:
   <li>Atomically safe images labeled'Bone Broth, What’s the Difference...'”</li>
@@ -139,6 +140,6 @@
   <li>The Forked Spoon’s “Bone Broth Recipe”</li>
   <p>
 Video: <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
-
+</details>
 </body>
 </html>
