--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -18,7 +18,7 @@
 	</div>
 	  
     <!-- STEP 1 -->
-    <details open>
+    <details>
       <summary class="stepTitle">Step 1: Select Your Bones</summary>
 
       <div class="stepContent">
@@ -132,11 +132,10 @@
   </div>
   <p><!-- /#wrapper -->    </p>
   <details open> <!--reference-->
-  References
-  Pictures:
+  References Pictures:
   <li>Atomically safe images labeled'Bone Broth, What’s the Difference...'”</li>
-<li>Fluent Foodie’s <li>“Chicken Bone Broth”</li>
-  <li> Sea Salt Savorings’ “Homemade chicken bone broth”</li>
+  <li>Fluent Foodie’s “Chicken Bone Broth”</li>
+  <li>Sea Salt Savorings’ “Homemade chicken bone broth”</li>
   <li>The Forked Spoon’s “Bone Broth Recipe”</li>
   <p>
 Video: <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
