--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -133,12 +133,16 @@
   <p><!-- /#wrapper -->    </p>
   <details open> <!--reference-->
   <summary class="stepTitle">Reference</summary>
-  References Pictures:
+  <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+  Pictures:
   <li>Atomically safe images labeled'Bone Broth, What’s the Difference...'”</li>
   <li>Fluent Foodie’s “Chicken Bone Broth”</li>
   <li>Sea Salt Savorings’ “Homemade chicken bone broth”</li>
   <li>The Forked Spoon’s “Bone Broth Recipe”</li>
   <p>Video: <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
+   </div><!-- /.stepContent -->
 </details>
 </body>
 </html>
