--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -141,7 +141,8 @@
   <li>Fluent Foodie’s “Chicken Bone Broth”</li>
   <li>Sea Salt Savorings’ “Homemade chicken bone broth”</li>
   <li>The Forked Spoon’s “Bone Broth Recipe”</li>
-  <p>Video: <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
+  <p>Video: 
+  <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
    </div><!-- /.stepContent -->
 </details>
 </body>
