--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -136,6 +136,7 @@
   <div class="stepContent">
         <div class="stepDescription">
           <p>
+	  </div>
   Pictures:
   <li>Atomically safe images labeled'Bone Broth, What’s the Difference...'”</li>
   <li>Fluent Foodie’s “Chicken Bone Broth”</li>
