--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -15,8 +15,8 @@
 	<a href="page4.html"> Go to Page 4 </a>
 
 	<br><br>
-	<h2> Brief description of content to be embedded</h2>
+	<h2> Jose.elcook - Garlic recipes</h2>
 	<!-- iFrame code will be added below -->
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zMyzZC4gPLI?si=mERPLHUVjlFbuc2r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
