--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -10,13 +10,13 @@
 <h1> Adding External Content using iFrames </h1>
 
 	<a href="index.html"> Lofi Song </a>
-	<a href="page2.html"> Song clip </a>
-	<a href="page3.html"> Garlic uses </a>
-	<a href="page4.html"> Film learning </a>
+	<a href="page2.html"> Film learning </a>
+	<a href="page3.html"> Garlic Uses </a>
+	<a href="page4.html"> Storyline Course </a>
 	
 	<br><br>
-	<h2> Shar - I get it I get it</h2>
+	<h2> Every Frame a painting "Akira Kurosawa - Composing movement"</h2>
 	<!-- iFrame code will be added below -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/CyiSjhnSvpY?si=WuZh8uXmxGtgVI2N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/doaQC-S8de8?si=lO3NeZg0ixbwY4ra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
