--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -10,14 +10,14 @@
 <h1> Adding External Content using iFrames </h1>
 
 	<a href="index.html"> Lofi Song </a>
-	<a href="page2.html"> Song clip </a>
-	<a href="page3.html"> Garlic uses </a>
-	<a href="page4.html"> Film learning </a>
+	<a href="page2.html"> Film learning </a>
+	<a href="page3.html"> Garlic Uses </a>
+	<a href="page4.html"> Storyline Course </a>
 
 	<br><br>
 	<h2> Nujabes - Lady Brown </h2>
 	<!-- iFrame code will be added below -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/R5dphZnPb9A?si=dW_eHSKGXzhm8nnh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="900" height="1200" src="https://www.youtube.com/embed/R5dphZnPb9A?si=dW_eHSKGXzhm8nnh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	
 </body>
 </html>
