--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -10,9 +10,9 @@
 <h1> Adding External Content using iFrames </h1>
 
 	<a href="index.html"> Lofi Song </a>
-	<a href="page2.html"> Song clip </a>
-	<a href="page3.html"> Garlic uses </a>
-	<a href="page4.html"> Film learning </a>
+	<a href="page2.html"> Film learning </a>
+	<a href="page3.html"> Garlic Uses </a>
+	<a href="page4.html"> Storyline Course </a>
 
 	<br><br>
 	<h2> Jose.elcook - Garlic recipes</h2>
