--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -18,7 +18,7 @@
 <h2> Content from Captivate / Storyline / H5P </h2>
 <!-- iFrame code will be added below -->
 
-<iframe width="900" height="1200" src="tool-content/index.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
+<iframe width="900" height="1200" src="tool-content/index.html.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
 
 </body>
 </html>
