--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -15,7 +15,7 @@
 	<a href="page4.html"> Storyline Course </a>
 
 	<br><br>
-<h2> Content from Captivate / Storyline / H5P </h2>
+<h2> Content from Storyline</h2>
 <!-- iFrame code will be added below -->
 
 <iframe width="900" height="1200" src="tool-content/index.html.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
