--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -12,7 +12,7 @@
 	<a href="index.html"> Lofi Song </a>
 	<a href="page2.html"> Film learning </a>
 	<a href="page3.html"> Garlic Uses </a>
-	<a href="page4.html"> Storyline Course </a>
+	<a href="page4.html"> Learning about Catcus </a>
 
 	<br><br>
 <h2> Content from Storyline</h2>
