--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -9,15 +9,19 @@
 <body>
 <h1> Adding External Content using iFrames </h1>
 
-	<a href="index.html"> Lofi Song </a>
+	<a href="index.html"> Kepler's Law </a>
 	<a href="page2.html"> Film learning </a>
 	<a href="page3.html"> Garlic Uses </a>
 	<a href="page4.html"> Learning about Catcus </a>
 
 	<br><br>
-	<h2> Nujabes - Lady Brown </h2>
+	<h2> Nujabes - Kepler's Law </h2>
 	<!-- iFrame code will be added below -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/R5dphZnPb9A?si=dW_eHSKGXzhm8nnh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://phet.colorado.edu/sims/html/keplers-laws/latest/keplers-laws_en.html"
+        width="800"
+        height="600"
+        allowfullscreen>
+</iframe>
 	
 </body>
 </html>
