--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -9,7 +9,7 @@
 <body>
 <h1> Adding External Content using iFrames </h1>
 
-	<a href="index.html"> Lofi Song </a>
+	<a href="index.html"> Kepler's Law </a>
 	<a href="page2.html"> Film learning </a>
 	<a href="page3.html"> Garlic Uses </a>
 	<a href="page4.html"> Learning about Catcus </a>
