--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -9,14 +9,16 @@
 <body>
 <h1> Adding External Content using iFrames </h1>
 
-	<a href="index.html"> Kepler's Law </a>
+	<a href="index.html"> Science! </a>
 	<a href="page2.html"> Film learning </a>
-	<a href="page3.html"> Garlic Uses </a>
+	<a href="page3.html"> Wordchart </a>
 	<a href="page4.html"> Learning about Catcus </a>
 
 	<br><br>
-	<h2> Jose.elcook - Garlic recipes</h2>
+	<h2> Past and Present Worksheet</h2>
 	<!-- iFrame code will be added below -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/zMyzZC4gPLI?si=mERPLHUVjlFbuc2r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<div class="container"
+	<embed src="file/worksheet.pdf" width="100%" height="600px" />
+	</div>
 </body>
 </html>
