--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -9,9 +9,9 @@
 <body>
 <h1> Adding External Content using iFrames </h1>
 
-	<a href="index.html"> Kepler's Law </a>
+	<a href="index.html"> Science! </a>
 	<a href="page2.html"> Film learning </a>
-	<a href="page3.html"> Garlic Uses </a>
+	<a href="page3.html"> Wordchart </a>
 	<a href="page4.html"> Learning about Catcus </a>
 
 	<br><br>
