--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -18,7 +18,7 @@
 	<h2> Past and Present Worksheet</h2>
 	<!-- iFrame code will be added below -->
 	<div class="container"
-	<embed src="file/worksheet.pdf" width="100%" height="600px" />
+	<embed src="file/worksheet.pdf" type="application/pdf" width="100%" height="600px" />
 	</div>
 </body>
 </html>
