--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -12,7 +12,7 @@
 	<a href="index.html"> Science! </a>
 	<a href="page2.html"> Film learning </a>
 	<a href="page3.html"> Wordchart </a>
-	<a href="page4.html"> Learning about Catcus </a>
+	<a href="page4.html"> Catcus! </a>
 	
 	<br><br>
 	<h2> Every Frame a painting "Akira Kurosawa - Composing movement"</h2>
