--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -17,8 +17,6 @@
 	<br><br>
 	<h2> Past and Present Worksheet</h2>
 	<!-- iFrame code will be added below -->
-	<div class="container"
-	<embed src="file/worksheet.pdf" type="application/pdf" width="100%" height="600px" />
-	</div>
+	<iframe width="900" height="1200" src="file/worksheet.pdf" frameborder="0"></iframe>
 </body>
 </html>
