--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -15,7 +15,7 @@
 	<a href="page4.html"> Catcus! </a>
 
 	<br><br>
-	<h2> Nujabes - Kepler's Law </h2>
+	<h2> Kepler's Law </h2>
 	<!-- iFrame code will be added below -->
 <iframe src="https://phet.colorado.edu/sims/html/keplers-laws/latest/keplers-laws_en.html"
         width="800"
