--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -15,7 +15,7 @@
 	<a href="page4.html"> Catcus! </a>
 
 	<br><br>
-<h2> Content from Storyline</h2>
+<h2> Learning about Catcus</h2>
 <!-- iFrame code will be added below -->
 
 <iframe width="800" height="900" src="tool-content/index.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
