--- a/IST541/lab5/question1.html
+++ b/IST541/lab5/question1.html
@@ -2,9 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Otters</title>
 </head>
+<link href="css/otter.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <body>
+	<div id="wrapper">
+ 
+<h1>What is one food that otters like to eat?</h1>
+ 
+<h3 id="hint">Hint: Hover over the image below to find out!</h3>
+ 
+<img onmouseenter="showAnswer()" id="otter"  src="img/otter.jpg"   />
+<img onmouseleave="hideAnswer()" id="otter_eating" src="img/otter_eating urchin.png" />
+
+ 
+      <div id="answer"></div>  <!-- This is a placeholder to display the answer-->
+ 
+</div> <!-- closing  “wrapper” -->
+
+	<script>
+ function showAnswer() {
+	   $("#otter").hide();
+	   $("#otter_eating urchin").show();
+	   $("#answer").html("<h2>They love eating Sea urchin!</h2>");
+	}
+
+function hideAnswer() {
+	   $("#otter").show();
+	   $("#otter_eating urchin").hide();
+	   $("#answer").html("");  
+	}
+</script>
+	
 </body>
 </html>
