--- a/IST541/lab5/question1.html
+++ b/IST541/lab5/question1.html
@@ -13,7 +13,7 @@
 <h1>What is one food that otters like to eat?</h1>
 <h3 id="hint">Hint: Hover over the image below to find out!</h3>
 <img onmouseenter="showAnswer()" id="otter"  src="img/otter.jpg"   />
-<img onmouseleave="hideAnswer()" id="otter_eating" src="img/otter_eating urchin.png" />
+<img onmouseleave="hideAnswer()" id="otter_eating" src="img/otter_eating urchin.jpg" />
 <div id="answer"></div>  
 		<!-- This is a placeholder to display the answer-->
  
@@ -23,7 +23,7 @@
 function showAnswer() {
 	   $("#otter").hide();
 	   $("#otter_eating urchin").show();
-	   $("#answer").html("<h2>They love eating Sea urchin!</h2>");
+	   $("#answer").html("<h2>They love eating Sea urchins!</h2>");
 	}
 function hideAnswer() {
 	   $("#otter").show();
