--- a/IST541/lab5/question1.html
+++ b/IST541/lab5/question1.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="wrapper">
  
-<h1>What is one food that otters like to eat?</h1>
+<h1>What is one food that Sea Otters like to eat?</h1>
 <h3 id="hint">Hint: Hover over the image below to find out!</h3>
 <img onmouseenter="showAnswer()" id="otter"  src="img/otter.jpg"   />
 <img onmouseleave="hideAnswer()" id="otter_eating urchin" src="img/otter_eating urchin.jpg" />
