--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -11,7 +11,7 @@
 <h1>What is a Koala's Favorite Food?</h1>
 <h3>Click on one of the following choices</h3>
 
-<h2 onclick="wrongAnswer1()"> class="choices"> Starfish </h2>
+<h2 onclick="wrongAnswer1()"class="choices"> Starfish </h2>
 <h2 onclick="wrongAnswer2()"class="choices"> Kelp </h2>
 <h2 onclick="rightAnswer1()"class="choices"> Sea Urchins </h2>
 <h2 onclick="wrongAnswer2()"class="choices"> Snaping tutles </h2>
