--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -8,22 +8,36 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <body>
 <div id="wrapper">
-<h1>What is a Koala's Favorite Food?</h1>
+<h1>What is an Sea Otter's diet?</h1>
 <h3>Click on one of the following choices</h3>
 
 <h2 onclick="wrongAnswer1()"class="choices"> Starfish </h2>
 <h2 onclick="wrongAnswer2()"class="choices"> Kelp </h2>
 <h2 onclick="rightAnswer1()"class="choices"> Sea Urchins </h2>
-<h2 onclick="wrongAnswer2()"class="choices"> Snaping tutles </h2>
+<h2 onclick="wrongAnswer3()"class="choices"> Snaping tutles </h2>
 <div id="feedback"></div>
-<img id="koala_eating" src="img/otter_eating.jpg" />
+<img id="otter_eating" src="img/otter_eating.jpg" />
 </div>
-   <script>
-      function rightAnswer(){
-         $("#feedback").html("<h2 style='color:green'> Correct! They diet consist of fish, crayfish and sea urchins.</h2>");
+      <script>
+ 	   function rightAnswer(){
+         $("#feedback").html("<h2 style='color:green'> Correct! Sea Otter's diet consist of mostly shell fish and sea urchins.</h2>");
          $("#otter_eating").show();
+        }
+        function wrongAnswer1(){
+          $("#feedback").html("<h2 style='color:red'> Incorrect. Otters rarely eat starfish </h2>");
+          $("#otter_eating").hide();
+        }
+       function wrongAnswer2(){
+         $("#feedback").html("<h2 style='color:red'> Incorrect. While otters can eat kelp, they can't digest it. </h2>");
+         $("#otter_eating").hide();
+	   }
+	   function wrongAnswer3(){
+         $("#feedback").html("<h2 style='color:red'> Incorrect. River otter in rare cases will eat snapping turtle. </h2>");
+         $("#otter_eating").hide();
       }
-   </script>
+    </script>
+
+     
 
 </body>
 </html>
