--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -24,15 +24,15 @@
          $("#otter_eating").show();
         }
         function wrongAnswer1(){
-          $("#feedback").html("<h2 style='color:red'> Incorrect. Otters rarely eat starfish </h2>");
+          $("#feedback").html("<h2 style='color:red'> Incorrect. Sea Otters rarely eat starfish </h2>");
           $("#otter_eating").hide();
         }
        function wrongAnswer2(){
-         $("#feedback").html("<h2 style='color:red'> Incorrect. While otters can eat kelp, they can't digest it. </h2>");
+         $("#feedback").html("<h2 style='color:red'> Incorrect. While Sea Otters can eat kelp, they can't digest it. </h2>");
          $("#otter_eating").hide();
 	   }
 	   function wrongAnswer3(){
-         $("#feedback").html("<h2 style='color:red'> Incorrect. River otter in rare cases will eat snapping turtle. </h2>");
+         $("#feedback").html("<h2 style='color:red'> Incorrect. River otter in rare cases will eat snapping turtles. But not sea otters </h2>");
          $("#otter_eating").hide();
       }
     </script>
