--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -13,7 +13,7 @@
 
 <h2 onclick="wrongAnswer1()"class="choices"> Starfish </h2>
 <h2 onclick="wrongAnswer2()"class="choices"> Kelp </h2>
-<h2 onclick="rightAnswer1()"class="choices"> Sea Urchins </h2>
+<h2 onclick="rightAnswer()"class="choices"> Sea Urchins </h2>
 <h2 onclick="wrongAnswer3()"class="choices"> Snaping tutles </h2>
 <div id="feedback"></div>
 <img id="otter_eating" src="img/otter_eating.jpg" />
