--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -32,7 +32,7 @@
          $("#otter_eating").hide();
 	   }
 	   function wrongAnswer3(){
-         $("#feedback").html("<h2 style='color:red'> Incorrect. River otter in rare cases will eat snapping turtles. But not sea otters </h2>");
+         $("#feedback").html("<h2 style='color:red'> Incorrect. River otter in rare cases will eat snapping turtles. But not sea otters. </h2>");
          $("#otter_eating").hide();
       }
     </script>
