--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -16,7 +16,7 @@
 <h2 onclick="rightAnswer()"class="choices"> Sea Urchins </h2>
 <h2 onclick="wrongAnswer3()"class="choices"> Snaping tutles </h2>
 <div id="feedback"></div>
-<img id="otter_eating" src="img/otter_eating.jpg" />
+<img id="otter_eating" src="img/seaotter_eating crab.jpg" />
 </div>
       <script>
  	   function rightAnswer(){
