--- a/IST541/lab5/question2.html
+++ b/IST541/lab5/question2.html
@@ -13,14 +13,14 @@
 
 <h2 onclick="wrongAnswer1()"class="choices"> Starfish </h2>
 <h2 onclick="wrongAnswer2()"class="choices"> Kelp </h2>
-<h2 onclick="rightAnswer()"class="choices"> Sea Urchins </h2>
+<h2 onclick="rightAnswer()"class="choices"> Shellfish and Sea Urchins </h2>
 <h2 onclick="wrongAnswer3()"class="choices"> Snaping tutles </h2>
 <div id="feedback"></div>
 <img id="otter_eating" src="img/seaotter_eating crab.jpg" />
 </div>
       <script>
  	   function rightAnswer(){
-         $("#feedback").html("<h2 style='color:green'> Correct! Sea Otter's diet consist of mostly shell fish and sea urchins.</h2>");
+         $("#feedback").html("<h2 style='color:green'> Correct! Sea Otter's diet consist of mostly shellfish and Sea Urchins.</h2>");
          $("#otter_eating").show();
         }
         function wrongAnswer1(){
