--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -2,9 +2,27 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Labfinal: Intro to Meditation</title>
+<link href="css/final.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<h1> Adding External Content using iFrames </h1>
+
+	<a href="index.html"> Home </a>
+	<a href="page2.html"> History </a>
+	<a href="page3.html"> How it works </a>
+	<a href="page4.html"> What to expect </a>
+    <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> Resources </a>
+	<br><br>
+	<h2> Introduction </h2>
+	<!-- iFrame code will be added below -->
+<iframe src="https://phet.colorado.edu/sims/html/keplers-laws/latest/keplers-laws_en.html"
+        width="800"
+        height="600"
+        allowfullscreen>
+</iframe>
+	
 </body>
 </html>
