--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -4,20 +4,22 @@
 <meta charset="utf-8">
 <title>lab4</title>
 </head>
+
 <link href="css/styles.css" rel="stylesheet">
 <body>
-	<div id="wrapper">
-<h1> Learning 1, 2, and 3 in Chinese</h1>
-<table border="1">
-<tr>
-<td>
-   <img src="img/one.png" /><br /> Yee (One) <br />
-       <audio controls src="audio/one.mp3"> 
-          This browser does not support HTML5 audio
-          </audio>
-           </td>
-        </tr>
-   </table>     </div>
-
+<div id="wrapper">
+  <h1> changing tires</h1>
+  <table border="1">
+    <tr>
+      <td><img src="img/tire.jpg" /><br />
+        Steps to change tire <br />
+        <audio controls src="audio/rubber-tire-screech.mp3"> This browser does not support HTML5 audio </audio></td>
+      <img src="img/tools.jpg" /><br />
+      Required tools <br />
+      <audio controls src="audio/tools_clank.mp3"> This browser does not support HTML5 audio </audio>
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
