--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -20,6 +20,13 @@
       </td>
     </tr>
   </table>
+video  controls  width="500">
+<source src="video/How To Change a Flat Tire.mp4" type="video/mp4" />
+<source src="video/How To Change a Flat Tire.ogg" type="video/ogg" />
+       <track id="entrack" label="English subtitles" kind="captions" src="video/captions.vtt" srclang="en" default>
+HTML5 Video not supported
+</video>
+
 </div>
 </body>
 </html>
