--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -20,8 +20,7 @@
       </td>
     </tr>
   </table>
-  video  controls  width="500">
-  <source src="video/numbers.ogg" type="video/ogg" />
+  <video  controls  width="500">
   <source src="video/How To Change a Flat Tire.mp4" type="video/mp4" />
   <source src="video/How To Change a Flat Tire.ogg" type="video/ogg" />
   <track id="entrack" label="English subtitles" kind="captions" src="video/captions.vtt" srclang="en" default>
@@ -29,5 +28,18 @@
   </video>
 </div>
 </body>
+
+<h2>
+References:
+Background picture
+https://stock.adobe.com/images/car-tires-on-road-background-change-winter-tire-for-summer/490055763
+Picture:
+https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step
+https://www.mach1services.com/how-to-change-a-flat-tire/
+Media files:
+pixabay
+Video:
+https://www.youtube.com/watch?v=-fXXwZKDL9s
+</h2>
+
 </html>
-https://pixabay.com/sound-effects/search/tools%20clanking/https://pixabay.com/sound-effects/search/tire/https://www.mach1services.com/how-to-change-a-flat-tire/https://www.mach1services.com/how-to-change-a-flat-tire/https://www.mach1services.com/how-to-change-a-flat-tire/div>
