--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -8,7 +8,7 @@
 <link href="css/styles.css" rel="stylesheet">
 <body>
 <div id="wrapper">
-  <h1> changing tires</h1>
+  <h1>How to Change Tires</h1>
   <table border="1">
     <tr>
       <td><img src="img/tire.jpg" /><br />
