--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -4,11 +4,13 @@
 <meta charset="utf-8">
 <title>lab4</title>
 </head>
-
 <link href="css/styles.css" rel="stylesheet">
 <body>
 <div id="wrapper">
   <h1>How to Change Tires</h1>
+	<a href="index.html"> Visuals </a>
+	<a href="page2.html"> Video </a>
+	<a href="page3.html"> Reference </a>
   <table border="1">
     <tr>
       <td><img src="img/tire.jpg" /><br />
