--- a/IST541/Lab4/page3.html
+++ b/IST541/Lab4/page3.html
@@ -4,7 +4,22 @@
 <meta charset="utf-8">
 <title>page3</title>
 </head>
-
+<link href="css/styles.css" rel="stylesheet">
 <body>
+	<a href="index.html"> Visuals </a>
+	<a href="page2.html"> Video </a>
+	<a href="page3.html"> Reference </a>
+<h2>
+References:
+Background picture
+https://stock.adobe.com/images/car-tires-on-road-background-change-winter-tire-for-summer/490055763
+Picture:
+https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step
+https://www.mach1services.com/how-to-change-a-flat-tire/
+Media files:
+pixabay
+Video:
+https://www.youtube.com/watch?v=-fXXwZKDL9s
+</h2>
 </body>
 </html>
