--- a/IST541/Lab4/page3.html
+++ b/IST541/Lab4/page3.html
@@ -13,12 +13,14 @@
 References:
 Background picture
 https://stock.adobe.com/images/car-tires-on-road-background-change-winter-tire-for-summer/490055763
-Picture:
+
+	Picture:
 https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step
 https://www.mach1services.com/how-to-change-a-flat-tire/
-Media files:
+Media:
 pixabay
-Video:
+
+	Video:
 https://www.youtube.com/watch?v=-fXXwZKDL9s
 </h2>
 </body>
