--- a/IST541/Lab4/page2.html
+++ b/IST541/Lab4/page2.html
@@ -10,6 +10,7 @@
 	<a href="page2.html"> Video </a>
 	<a href="page3.html"> Reference </a>
 	<br></br>
+	<div>
 	<video  controls  width="500">
   <source src="video/How To Change a Flat Tire.mp4" type="video/mp4" />
   <source src="video/How To Change a Flat Tire.ogg" type="video/ogg" />
