--- a/IST541/Lab4/page3.html
+++ b/IST541/Lab4/page3.html
@@ -10,7 +10,8 @@
 	<a href="page2.html"> Video </a>
 	<a href="page3.html"> Reference </a>
 	<br></br>
-<h2>
+<div>
+	<h2>
 References:
 Background picture
 https://stock.adobe.com/images/car-tires-on-road-background-change-winter-tire-for-summer/490055763
@@ -24,5 +25,6 @@ pixabay
 	Video:
 https://www.youtube.com/watch?v=-fXXwZKDL9s
 </h2>
+	</div>
 </body>
 </html>
