--- a/IST541/Lab4/page3.html
+++ b/IST541/Lab4/page3.html
@@ -11,20 +11,16 @@
 	<a href="page3.html"> Reference </a>
 	<br></br>
 <div>
-	<h2>
-References:
-Background picture
-https://stock.adobe.com/images/car-tires-on-road-background-change-winter-tire-for-summer/490055763
+	
+	<section id="References" class="step">
+      <div class="stepTitle">References</div>
 
-	Picture:
-https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step
-https://www.mach1services.com/how-to-change-a-flat-tire/
-Media:
-pixabay
-
-	Video:
-https://www.youtube.com/watch?v=-fXXwZKDL9s
-</h2>
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p> Background <li>https://www.istockphoto.com/vector/retrowave-80s-style-car-illustration-gm1474112571-504068239?searchscope=image%2Cfilm</li> Pictures: <li>https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step</li> <li>https://www.mach1services.com/how-to-change-a-flat-tire</li> Media: <li>pixabay</li> Video: <li>https://www.youtube.com/watch?v=-fXXwZKDL9s</li>
+            
+          </p>
+        </div>
 	</div>
 </body>
 </html>
