--- a/IST541/lab4/page3.html
+++ b/IST541/lab4/page3.html
@@ -17,7 +17,7 @@
 
       <div class="stepContent">
         <div class="stepDescription">
-          <h2><p> Background <li>https://www.istockphoto.com/vector/retrowave-80s-style-car-illustration-gm1474112571-504068239?searchscope=image%2Cfilm</li> Pictures: <li>https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step</li> <li>https://www.mach1services.com/how-to-change-a-flat-tire</li> Media: <li>pixabay</li> Video: <li>https://www.youtube.com/watch?v=-fXXwZKDL9s</li></h2></p>
+          <h2><p> Background <li>https://www.istockphoto.com/vector/retrowave-80s-style-car-illustration-gm1474112571-504068239?searchscope=image%2Cfilm</li> Pictures: <li>https://discover.hubpages.com/autos/How-to-Change-a-Tire-Step-by-Step</li> <li>https://www.mach1services.com/how-to-change-a-flat-tire</li> Media: <li>pixabay</li> Video: <li>https://www.youtube.com/watch?v=-fXXwZKDL9s</p> </li></h2>
         </div>
 	</div>
 </body>
