--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -7,22 +7,17 @@
 </head>
 
 <body>
-<h1> Adding External Content using iFrames </h1>
+<h1> Home </h1>
 
 	<a href="index.html"> Home </a>
 	<a href="page2.html"> History </a>
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
-	<a href="page6.html"> Resources </a>
 	<br><br>
 	<h2> Introduction </h2>
-	<!-- iFrame code will be added below -->
-<iframe src="https://phet.colorado.edu/sims/html/keplers-laws/latest/keplers-laws_en.html"
-        width="800"
-        height="600"
-        allowfullscreen>
-</iframe>
-	
+	<h3> Welcome to intro to Meditiation, in this quick training we will be going over the history, how it works, and what to expect. 
+	</h3>
+
 </body>
 </html>
