--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -13,12 +13,27 @@
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
-	<a href="page6.html"> Resources </a>
     </h1>
 	
 	<br><br>
-	<h2> Brief description of content to be embedded</h2>
-	<!-- iFrame code will be added below -->
+	<h2> 
+	<details>
+      <summary class="stepTitle">History</summary>
+
+      <div class="stepContent">
+        <div class="stepDescription">
+          Meditation is actually a vage term used as a practice (or set of practices) for training attention, awareness, or reflection. With the aim of achieving mental clarity and emotional calm. For this particular training we will be focusing on using buddahism techniques: <li>basic breathing practices</li> <li>What to pay attention to while </li> 
+          </p>
+			<p class="warning">
+				<span class="material-icons">note</span>
+				This is a practice that happens in all reilgions not just buddahism.
+			    </p> </h2>
+		<div class="stepImage">
+          <img src="../Labfinal/img/M-Religion.jpg"
+			   </div>
+      </div><!-- /.stepContent -->
+    </details>
+	
 
 </body>
 </html>
