--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -22,7 +22,7 @@
 
       <div class="stepContent">
         <div class="stepDescription">
-          Meditation is actually a vage term used as a practice (or set of practices) for training attention, awareness, or reflection. With the aim of achieving mental clarity and emotional calm. For this particular training we will be focusing on using buddahism techniques: <li>basic breathing practices</li> <li>What to pay attention to while </li> 
+          Meditation is actually a vage term used as a practice (or set of practices) for training attention, awareness, or reflection. With the aim of achieving mental clarity and emotional calm. For this particular training we will be focusing on using buddahism techniques: <li>basic breathing practices</li> <li>What to pay attention to while meditating</li> 
           </p>
 			<p class="warning">
 				<span class="material-icons">note</span>
