--- a/IST541/Labfinal/page3.html
+++ b/IST541/Labfinal/page3.html
@@ -18,7 +18,7 @@
 	
 	<h2> 
 	<details>
-      <summary class="stepTitle">How to</summary>
+      <summary class="stepTitle">How to start</summary>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -31,15 +31,33 @@
 			<li>Trying this for 5 minutes a day</li>
 			</ol>
 			</p>
-			<p class="warning">
+			<p class="note">
 				<span class="material-icons">note</span>
-				This is a process and will take time for you to see the effect.
+				*This is a process and will take time for you to see the effect.
 			    </p> </h2>
 		<div class="stepImage">
           <img src="../Labfinal/img/types.jpg"
 			   </div>
       </div><!-- /.stepContent -->
     </details>
+	<h3>Source: <li>https://psychcentral.com/health/types-of-meditation </li> </h3>	
+<details>
+      <summary class="stepTitle">Research Finding </summary>
 
-</body>
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>In 2015 standford conducted a reseach based on meditation with compassion.  Results shows:          
+          <li>Decrese mind-wondering.</li>
+		  <li>Increased focus</li>  
+	      <li>More compassion towards others </li>  
+          </p>
+        </div>
+
+        <div class="stepImage">
+          <img src="../Labfinal/img/article.png" 
+        </div>
+      </div><!-- /.stepContent -->
+    </details><!--Step2-->
+      <h3>Source: <li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li> </h3>
+	</body>
 </html>
