--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -17,7 +17,7 @@
 	<br><br>
 	
 	<div id="wrapper">
-<h1>What does do people think meditation look like Vs. What it actually is.</h1>
+<h1>What we think meditation look like Vs. What it actually is.</h1>
 <h3 id="hint">Hint: Hover over the image below to find out!</h3>
 <img onmouseenter="showAnswer()" id="Meditation"  src="img/meditation.jpg"   />
 <img onmouseleave="hideAnswer()" id="thoughts" src="img/thoughts.jpg" />
@@ -38,6 +38,8 @@ function hideAnswer() {
 	   $("#answer").html("");  
 	}
 </script>
-	
+	<h3>Sources:
+		<li>https://easy-peasy.ai/ai-image-generator/images/tranquil-cartoon-yoga-character-nature-peaceful-meditation </li>
+		<li>https://serenityyogawellness.com/blog/meditation-101 </li> </h3>
 </body>
 </html>
