--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -33,7 +33,7 @@
 			   </div>
       </div><!-- /.stepContent -->
     </details>
-	
+		<h3>source: <li>https://mind.help/topic/meditation/</li> </h3>
 
 </body>
 </html>
