--- a/IST541/Labfinal/page5.html
+++ b/IST541/Labfinal/page5.html
@@ -16,6 +16,24 @@
     <a href="page5.html"> Quiz </a>
 	<br><br>
 	
+	<section id="step1" class="step">
+      <div class="stepTitle">Knowledge</div>
+
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>Now that you have learned some aspects of meditation, take a moment and try it with the following video: 
+			  <li>What comes up?</li> 
+			  <li>What is keeping you from focusing on the breath</li> 
+			  <li>How does it feel afterwards?</li>
+            As Jack kornfield would say "this is meditation practice not meditation prefect." This will take time to see the effect.
+          </p>
+        </div>
+
+        <div class="stepImage">
+          <img src="" alt=
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 	<video  controls  width="500">
 <source src="video/Meditation.mp4" type="video/mp4" />
 <source src="video/meditation.ogg" type="video/ogg" />
