--- a/IST541/Labfinal/page3.html
+++ b/IST541/Labfinal/page3.html
@@ -32,7 +32,7 @@
 			</ol>
 			</p>
 			<p class="note">
-				<span class="material-icons">note</span>
+				<span class="material-icons"></span>
 				*This is a process and will take time for you to see the effect.
 			    </p> </h2>
 		<div class="stepImage">
