--- a/IST541/Labfinal/page3.html
+++ b/IST541/Labfinal/page3.html
@@ -32,8 +32,8 @@
 			</ol>
 			</p>
 			<p class="note">
-				<span class="material-icons"></span>
-				*This is a process and will take time for you to see the effect.
+				<span class="material-icons">*</span>
+				This is a process and will take time for you to see the effect.
 			    </p> </h2>
 		<div class="stepImage">
           <img src="../Labfinal/img/types.jpg"
