--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -25,8 +25,8 @@
           Meditation is actually a vage term used as a practice (or set of practices) for training attention, awareness, or reflection. With the aim of achieving mental clarity and emotional calm. For this particular training we will be focusing on using buddahism techniques: <li>basic breathing practices</li> <li>What to pay attention to while meditating</li> 
           </p>
 			<p class="note">
-				<span class="material-icons"></span>
-				*This is a practice that happens in all reilgions not just buddahism.
+				<span class="material-icons">*</span>
+				This is a practice that happens in all reilgions not just buddahism.
 			    </p> </h2>
 		<div class="stepImage">
           <img src="../Labfinal/img/M-Religion.jpg"
