--- a/IST541/Labfinal/page6.html
+++ b/IST541/Labfinal/page6.html
@@ -15,5 +15,14 @@
 	<a href="page6.html"> References </a>
 	<br><br>
 <body>
+	<h2>Sources:
+	<li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li>
+	<li>https://serenityyogawellness.com/blog/meditation-101 </li>
+	<li>https://psychcentral.com/health/types-of-meditation </li>
+	<li>https://mind.help/topic/meditation/ </li>
+	<li>https://easy-peasy.ai/ai-image-generator/images/tranquil-cartoon-yoga-character-nature-peaceful-meditation </li>
+	<li> </li>
+	
+	</h2>
 </body>
 </html>
