--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Labfinal: Intro to Meditation</title>
 <link href="css/final.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -12,9 +14,14 @@
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> References </a>
 	<br><br>
 	<h2> Introduction </h2>
 	<h3> Welcome to intro to Meditiation, in this quick training we will be going over the history, how it works, and what to expect. 
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>	
 	</h3>
 
 </body>
