--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -5,7 +5,8 @@
 <title>page2</title>
 </head>
 <link href="css/final.css" rel="stylesheet" type="text/css">
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <body>
 	<h1>
 	<a href="index.html"> Home </a>
@@ -13,6 +14,7 @@
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> References </a>
     </h1>
 	
 	<br><br>
