--- a/IST541/Labfinal/page3.html
+++ b/IST541/Labfinal/page3.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>page3</title>
 <link href="css/final.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -12,6 +14,7 @@
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> References </a>
 	<br><br>
 	
 	<h2> 
