--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -5,13 +5,17 @@
 <title>page4</title>
 </head>
 <link href="css/final.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 <body>
 	<a href="index.html"> Home </a>
 	<a href="page2.html"> History </a>
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> References </a>
 	<br><br>
 	
 	<div id="wrapper">
