--- a/IST541/Labfinal/page5.html
+++ b/IST541/Labfinal/page5.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>page5</title>
 <link href="css/final.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -12,6 +14,7 @@
 	<a href="page3.html"> How it works </a>
 	<a href="page4.html"> What to expect </a>
     <a href="page5.html"> Quiz </a>
+	<a href="page6.html"> References </a>
 	<br><br>
 	
 	<section id="step1" class="step">
@@ -34,7 +37,7 @@
        <track id="entrack" label="English subtitles" kind="captions" src="video/captions.vtt" srclang="en" default>
 HTML5 Video not supported
 </video>
-	<h2> Source: https://www.youtube.com/watch?v=92i5m3tV5XY&t=1s</h2>
+
 
 </body>
 </html>
