--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -18,11 +18,20 @@
 	<br><br>
 	<h2> Introduction </h2>
 	<h3> Welcome to intro to Meditiation, in this quick training we will be going over the history, how it works, and what to expect. 
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>	
-	</h3>
+	
+		section id="step1" class="step">
+      <div class="stepTitle">Introduction</div>
 
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>Here is a simple way to perceive meditation.</p>
+        </div>
+    </section>
+		<video  controls  width="500">
+<source src="video/what.mp4" type="video/mp4" />
+<source src="video/what.ogg" type="video/ogg" />
+       <track id="entrack" label="English subtitles" kind="captions" src="video/captions.vtt" srclang="en" default>
+HTML5 Video not supported
+</video>
 </body>
 </html>
