--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -19,7 +19,7 @@
 	<h1> Introduction </h1>
 	<h2> Welcome to intro to Meditiation, in this quick training we will be going over the history, how it works, and what to expect. 
 	
-		section id="step1" class="step">
+		<section id="step1" class="step">
       <div class="stepTitle">Introduction</div>
 
       <div class="stepContent">
