--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -32,7 +32,7 @@
 function showAnswer() {
 	   $("#Thoughts").hide();
 	   $("#thoughts").show();
-	   $("#answer").html("<h2>it's a consistant flow of throughts we just learn to not to follow pay attendtion to it.</h2>");
+	   $("#answer").html("<h2> Here is the trick, the thoughts don't stop, we just learn to not to pay attention to it.</h2>");
 	}
 function hideAnswer() {
 	   $("#thoughts").show();
